EVALSYS-1290 Fixed stepped scale alignment
git-svn-id: https://source.sakaiproject.org/contrib/evaluation/branches/unicon-ucb@80663 fdecad78-55fc-0310-b1b2-d7d25cf747c9

--- a/tool/src/webapp/content/css/scss/_layout.scss
+++ b/tool/src/webapp/content/css/scss/_layout.scss
@@ -328,9 +328,14 @@
       padding-top: 0 !important;
     }
   }
-  .steppedItemGroup img,
-  .steppedItemGroup table td {
-    vertical-align: middle;
+  .steppedItemGroup {
+    .choiceGroup {
+      padding-right: 0.2em;
+    }
+    img,
+    table td {
+      vertical-align: middle;
+    }
   }
   
 
